--- a/styles/payment.css
+++ b/styles/payment.css
@@ -1,8 +1,38 @@
 body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    background-color: #e0e0e0;
     }
+
 main{
     height: 100%;
     width: 100%;
+}
+
+header{
+    background-color: rosybrown;
+}
+
+footer{
+    background-color: rosybrown;
+}
+
+.hotel-img{
+    background-color:  rgb(132,136,139);
+    width: 50%;
+    height: 20%;
+    margin: 2% auto;
+}
+
+.customer-info{
+    margin: 2%;
+
+}
+
+.payment{
+    margin: 2%;
+    border: 1px solid black;
+    border-radius: 5px;
+    padding: 1% 2%;
 }
