--- a/styles/detail.css
+++ b/styles/detail.css
@@ -1,8 +1,39 @@
 body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    background-color: #e0e0e0;
     }
+
 main{
     height: 100%;
     width: 100%;
+}
+
+header{
+    background-color: rosybrown;
+}
+
+footer{
+    background-color: rosybrown;
+}
+
+.hotel-img{
+    margin-top: 2%;
+    margin-left: 4%;
+    margin-right: 4%;
+}
+
+.booking-form{
+    margin-top: 2%;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 1%;
+}
+
+.hotel-des{
+    margin-top: 1%;
+    margin-left: 4%;
+    margin-right: 4%;
+    margin-bottom: 2%;
 }
