--- a/styles/index.css
+++ b/styles/index.css
@@ -1,8 +1,35 @@
 body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    background-color: #e0e0e0;
     }
 main{
     height: 100%;
     width: 100%;
+}
+
+header{
+    background-color: rosybrown;
+}
+
+footer{
+    background-color: rosybrown;
+}
+
+.search-content{
+    background-image: url("https://media-cdn.tripadvisor.com/media/photo-o/14/10/2e/af/india.jpg");
+    height: 380px;
+    background-repeat: no-repeat;
+    background-attachment: center;
+}
+
+.city-cards{
+    margin: 0 15%;
+    
+}
+
+.city-img{
+    padding: 4%;
+    border-radius: 25%;
 }
