--- a/styles/list.css
+++ b/styles/list.css
@@ -1,8 +1,25 @@
 body {
     height: 100%;
     width: 100%;
+    margin: 0;
+    background-color: #e0e0e0;
     }
+
 main{
     height: 100%;
     width: 100%;
+}
+
+header{
+    background-color: rosybrown;
+}
+
+footer{
+    background-color: rosybrown;
+}
+
+.hotel-img{
+    background-color:  rgb(132,136,139);
+    margin: 2%;
+    width: 40%;
 }
